fix image on mobile screen size

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,7 +104,7 @@ header {
 }
 
 @media screen and (max-width: 650px) {
-  header img {
+  #intro img {
     float: none;
     display: block;
     margin: 0 auto;
